Use input for buttons and fix alignment in video and question

--- a/frontend/src/Room/questionSectionStyle.scss
+++ b/frontend/src/Room/questionSectionStyle.scss
@@ -8,7 +8,7 @@
     .questionPortion {
         margin: 10%;
         .questionHeader {
-            .nextButtonWrapper {
+            .nextButton {
                 text-align: end;
                 margin-bottom: 10%;
             }
